# flashcard

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  a1-freundliche-brief  a1-personalpronomen  de  dict  lookup.sh
data/: keywords  notes  practices.csv
data/grammars/: A2.12A.1  A2.12A.10  A2.12A.4  A2.12A.7  A2.12A.8  A2.12A.9  B1.1A.7  B1.1A.8  B1.1A.9  B1.1B.10  B1.1B.4  B1.1B.9.d
include/flashcard/: flashcard.hpp  network.hpp
src/: flashcard.cpp  main.cpp  network.cpp
